change path to get water notes
