# docs/swagger.json
@@ -770,7 +770,7 @@
         }
       }
     },
-    "/water/day": {
+    "/water/day/{time}": {
       "get": {
         "tags": [
           "Water"
@@ -783,25 +783,17 @@
             "bearerAuth": []
           }
         ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": [
-                  "date"
-                ],
-                "properties": {
-                  "date": {
-                    "description": "Date of day where water notes will be searched",
-                    "type": "number",
-                    "example": 1722772947000
-                  }
-                }
-              }
+        "parameters": [
+          {
+            "in": "path",
+            "name": "time",
+            "required": true,
+            "schema": {
+              "type": "number",
+              "example": 1722772947000
             }
           }
-        },
+        ],
         "responses": {
           "200": {
             "description": "Successfully find notes on day",
@@ -872,7 +864,7 @@
         }
       }
     },
-    "/water/month": {
+    "/water/month/{time}": {
       "get": {
         "tags": [
           "Water"
@@ -885,25 +877,17 @@
             "bearerAuth": []
           }
         ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": [
-                  "date"
-                ],
-                "properties": {
-                  "date": {
-                    "description": "Date of month where water notes will be searched",
-                    "type": "integer",
-                    "example": 1722772947000
-                  }
-                }
-              }
+        "parameters": [
+          {
+            "in": "path",
+            "name": "time",
+            "required": true,
+            "schema": {
+              "type": "number",
+              "example": 1722772947000
             }
           }
-        },
+        ],
         "responses": {
           "200": {
             "$ref": "#/components/responses/200"
